# InverseScale

./: CMakeLists.txt  README.md
InverseScale/: InverseScale.cpp  InverseScale.h  pluginMain.cpp
